gccida/g2/record_giv
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/record_giv/src/loop.c:6076:1: error: unknown type name 'induction_1'
induction_1 *v, 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/record_giv/src/loop.c:6084:1: error: must use 'enum' tag to refer to type 'g_types'
g_types type, 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/record_giv/src/loop.c:6092:1: error: must use 'enum' tag to refer to type 'g_types'
g_types v18; // r9d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/record_giv/src/loop.c:6093:4: error: expected ';' after expression
rtx v19; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/record_giv/src/loop.c:6093:5: error: use of undeclared identifier 'v19'
rtx v19; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/record_giv/src/loop.c:6094:4: error: expected ';' after expression
rtx v20; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/record_giv/src/loop.c:6094:5: error: use of undeclared identifier 'v20'
rtx v20; // rbx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/record_giv/src/loop.c:6101:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v27; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/record_giv/src/loop.c:6110:4: error: expected ';' after expression
rtx rtwint; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/record_giv/src/loop.c:6110:5: error: use of undeclared identifier 'rtwint'; did you mean 'rtuint'?
rtx rtwint; // rax 
    ^~~~~~
    rtuint
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/record_giv/src/loop.c:6097:9: note: 'rtuint' declared here
__int64 rtuint; // rdx 
        ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/record_giv/src/loop.c:6127:4: error: expected ';' after expression
rtx v53; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/record_giv/src/loop.c:6127:5: error: use of undeclared identifier 'v53'
rtx v53; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/record_giv/src/loop.c:6136:4: error: expected ';' after expression
rtx dest_rega; // [rsp+28h] [rbp-50h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/record_giv/src/loop.c:6136:5: error: use of undeclared identifier 'dest_rega'; did you mean 'dest_reg'?
rtx dest_rega; // [rsp+28h] [rbp-50h] 
    ^~~~~~~~~
    dest_reg
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/record_giv/src/loop.c:6079:5: note: 'dest_reg' declared here
rtx dest_reg, 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/record_giv/src/loop.c:6138:4: error: expected ';' after expression
rtx v65; // [rsp+30h] [rbp-48h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/record_giv/src/loop.c:6138:5: error: use of undeclared identifier 'v65'
rtx v65; // [rsp+30h] [rbp-48h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/record_giv/src/loop.c:6140:1: error: must use 'enum' tag to refer to type 'g_types'
g_types v67; // [rsp+3Ch] [rbp-3Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/record_giv/src/loop.c:6149:27: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v16 = (  struct rtx_def *)insn[2]; 
                          ^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/record_giv/src/loop.c:6153:13: error: expected identifier or '('
 struct set = src_reg; 
            ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/record_giv/src/obj/loop.o] Error 1
